# pyseqrna

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  Singularity.def  environment.yml  input_file.ini  pyproject.toml  reinstall_pyseqrna.sh  run_dryrun_matrix.sh  setup.py
.github/workflows/: lint.yml  tests.yml
docs/: conf.py  index.rst  modules.rst  pyseqrna.cli.rst  pyseqrna.modules.alignment.rst  pyseqrna.modules.annotation.rst  pyseqrna.modules.diffexp.pydiffexpress.core.rst  pyseqrna.modules.diffexp.pydiffexpress.datasets.rst  pyseqrna.modules.diffexp.pydiffexpress.dispersion.rst  pyseqrna.modules.diffexp.pydiffexpress.hypothesis_testing.rst  pyseqrna.modules.diffexp.pydiffexpress.normalization.rst  pyseqrna.modules.diffexp.pydiffexpress.results.rst  pyseqrna.modules.diffexp.pydiffexpress.rst  pyseqrna.modules.diffexp.pydiffexpress.utils.rst  pyseqrna.modules.diffexp.rst  pyseqrna.modules.multimapped_groups.rst  pyseqrna.modules.normalization.rst  pyseqrna.modules.quality.rst  pyseqrna.modules.quantification.rst  pyseqrna.modules.rst  pyseqrna.modules.trimming.rst  pyseqrna.modules.visualization.rst  pyseqrna.pipeline.rst  pyseqrna.pipeline.runners.rst  pyseqrna.rst  pyseqrna.utils.rst
pyseqrna/: __init__.py  __main__.py  __version__.py
pyseqrna/cli/: __init__.py  argument_manager.py  utils.py
tests/: conftest.py  test_alignment.py  test_annotation.py  test_coexpression.py  test_diffexp.py  test_pipeline.py  test_production_hardening.py  test_quality_control.py  test_quantification.py  test_trimming.py  test_visualization.py
(+156 files in other folders)
